@@ -43,7 +43,7 @@ and \fI\-\-hex\fR options can be used to manipulate the output. If the
 and the \fIDEVICE\fR is assumed to be ATA (or ATAPI).
 .PP
 The reference document used for interpreting an INQUIRY is T10/1713\-D
-Revision 7a (SPC\-4, 7 October 2006) found at http://www.t10.org .
+Revision 11 (SPC\-4, 14 May 2007) found at http://www.t10.org .
 Obsolete items in the standard INQUIRY response are displayed in
 brackets. The reference document for the ATA IDENTIFY (PACKET) DEVICE
 command is ATA8\-ACS found at http://www.t13.org .
