@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.25 [20070710]
+Changelog for sg3_utils-1.25 [20070711]
   - sg_dd: add oflag=sparse to step over bs*bpt number of zeros;
     - with oflag=sparse, write last bs*bpt segment at end or after
       error so file length of OFILE is appropriate
@@ -10,6 +10,7 @@ Changelog for sg3_utils-1.25 [20070710]
     - when coe>1 then SCSI READ LONG logic remember extended block
       length of first encountered error
   - sg_ses: sync with ses2r17
+  - sg_vpd: add block device characteristics VPD page
   - place source in subversion repository
 
 Changelog for sg3_utils-1.24 [20070507]
